Fix issue with text wrap for code block

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -1,6 +1,6 @@
 /*
     You can add your own custom styles here.
 */
-pre {
-    text-wrap: pretty;
+article-content code {
+    text-wrap: wrap;
 }
